# stm32_cmake_boot

./: CMakeLists.txt  STM32F4xx.cmake  itm_dump.sh
linker_scripts/: STM32F401CCUx_FLASH.ld  STM32F446RE_FLASH.ld
src/: foo.c  main.c  main.cpp
src/include/: aux.h  foo.h  init_hardware.h  pll.h
src/include/device/: stm32f4xx.h  system_stm32f4xx.h
src/include/periph/: i2c.c  i2c.h
src/startup/: init_hardware.c  interrupt_vectors.c  startup.c
